Fix: archive portable Linux complete et fonctionnelle
Corrections apportees:
1. Ajout dependances JavaFX natives Linux dans pom.xml
   - javafx-graphics:linux
   - javafx-media:linux
   - javafx-web:linux
   => Resout ClassNotFoundException GtkPlatformFactory

2. Script bash UTF8 sans BOM
   => Resout erreur shebang #!/bin/bash

3. Ajout fichiers aide dans doc/
   - doc/PRESENTATION.md
   - doc/INSTALLATION_OLLAMA.md
   => Programme trouve les fichiers au bon endroit

4. Correction filtre Maven Shade
   => PanoVisu.properties inclus dans JAR

Resultat: Archive fonctionnelle avec natives Linux + doc complete
Build 3598